---------------------------------------------------------------------------------------------------
Version: 1.16.0
Date: 2022-??-??

  Features:
    - Added Boss mode.  Boss spawner is revealed by launching a Psi Tracking Satellite.
    - Added Psi Tracking Satellite. It reveals a boss spawner and returns 1200 space science pack.
    - Once boss spawner revealed, launching additional Psi Tracking satellite will not spawn new boss until the existing boss has either killed or despawned.
    - The map chunk where the boss sit is revealed to player.
    - Boss sends out elite attack group periodically.
    - Boss performs various attacks when it takes damage.

  Changes:
    - When a custom attack squad completes an attack command, it will pick a new attack area. Instead of assigning to automatic group.
    - Level up function now runs every 10 mins.
    - When boss is active, Leveling up is halt until boss mode is ended.
    - Refactor custom attack handler to reduce remote call.

---------------------------------------------------------------------------------------------------
Version: 1.15.5
Date: 2022-09-02

  Bugfixes:
    - Yet another attempt to fix high level units escaping the level processor in early game.
    - Added an early game high level unit elimination function.

---------------------------------------------------------------------------------------------------
Version: 1.15.4
Date: 2022-08-20

  Bugfixes:
    - Fix level slider bug where when you are one level under max_level. The slide uses 0.05 interval. (Github Issue 23)

---------------------------------------------------------------------------------------------------
Version: 1.15.3
Date: 2022-07-10

  Changes:
    - Buffed HP on reinforced belt from 510 to 680
    - Buffed HP on reinforced inserter from 480 to 600
    - Buffed HP on reinforced pipe from 500 to 600
    - Buffed HP on reinforced underground pipe from 600 to 750
    - Buffed HP on reinforced underground belt from 600 to 750